<resources>
    <string name="app_name">MyAsyncTask</string>
    <string name="action_settings">Settings</string>
    <string name="labelRange">Range: </string>
    <string name="range">1000000</string>
    <string name="labelRate">Rate: </string>
    <string name="rate">1000</string>
    <string name="labelGuessPW">Guess password</string>
    <string name="startTask">onClick_StartTask</string>
</resources>
